refactor(community): trim social and polish borrow