@@ -1,20 +1,26 @@
-package com.wsb.social.controller;
+package com.wsb.book.controller;
 
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
+import com.wsb.book.api.dto.BookCollectCountDTO;
+import com.wsb.book.api.dto.CollectCategoryStatsDTO;
+import com.wsb.book.domain.Book;
+import com.wsb.book.domain.Collect;
+import com.wsb.book.service.BookService;
+import com.wsb.book.service.CollectService;
 import com.wsb.common.core.domain.Result;
-import com.wsb.social.api.dto.BookCollectCountDTO;
-import com.wsb.social.api.dto.CollectCategoryStatsDTO;
-import com.wsb.social.domain.Collect;
-import com.wsb.social.service.CollectService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
- * 收藏内部接口（供其他服务调用）
+ * 收藏内部接口，供其他服务调用
  */
 @RestController
 @RequestMapping("/v1/inner/collect")
@@ -22,17 +28,15 @@ import java.util.stream.Collectors;
 public class CollectInnerController {
 
     private final CollectService collectService;
+    private final BookService bookService;
 
-    /**
-     * 统计书籍收藏数（批量）
-     */
     @GetMapping("/stats/book-count")
     public Result<List<BookCollectCountDTO>> countCollectByBooks(@RequestParam(value = "book_ids", required = false) List<Long> bookIds) {
         List<Collect> collects;
         if (bookIds != null && !bookIds.isEmpty()) {
             collects = collectService.list(Wrappers.<Collect>lambdaQuery()
                     .in(Collect::getTargetId, bookIds)
-                    .eq(Collect::getCollectType, 1) // 图书
+                    .eq(Collect::getCollectType, 1)
                     .eq(Collect::getIsDeleted, false));
         } else {
             collects = collectService.list(Wrappers.<Collect>lambdaQuery()
@@ -40,48 +44,71 @@ public class CollectInnerController {
                     .eq(Collect::getIsDeleted, false));
         }
 
-        // 按书籍分组统计
         Map<Long, Long> countMap = collects.stream()
                 .collect(Collectors.groupingBy(Collect::getTargetId, Collectors.counting()));
 
         List<BookCollectCountDTO> result = countMap.entrySet().stream()
-                .map(e -> {
+                .map(entry -> {
                     BookCollectCountDTO dto = new BookCollectCountDTO();
-                    dto.setBookId(e.getKey());
-                    dto.setCollectCount(e.getValue().intValue());
+                    dto.setBookId(entry.getKey());
+                    dto.setCollectCount(entry.getValue().intValue());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return Result.success(result);
     }
 
-    /**
-     * 统计用户收藏的书籍数
-     */
     @GetMapping("/stats/user-collected")
     public Result<Integer> countUserCollected(@RequestParam("user_id") Long userId) {
         long count = collectService.count(Wrappers.<Collect>lambdaQuery()
                 .eq(Collect::getUserId, userId)
-                .eq(Collect::getCollectType, 1) // 图书
+                .eq(Collect::getCollectType, 1)
                 .eq(Collect::getIsDeleted, false));
-
         return Result.success((int) count);
     }
 
-    /**
-     * 按分类统计收藏数据（指定书籍ID列表）
-     * 注：由于收藏表没有分类字段，这里简化返回空列表
-     */
     @GetMapping("/stats/category")
     public Result<List<CollectCategoryStatsDTO>> getCollectStatsByCategory(@RequestParam(value = "book_ids", required = false) List<Long> bookIds) {
-        // 暂时返回空列表，需要关联Book表获取分类信息
-        return Result.success(List.of());
+        List<Collect> collects;
+        if (bookIds != null && !bookIds.isEmpty()) {
+            collects = collectService.list(Wrappers.<Collect>lambdaQuery()
+                    .in(Collect::getTargetId, bookIds)
+                    .eq(Collect::getCollectType, 1)
+                    .eq(Collect::getIsDeleted, false));
+        } else {
+            collects = collectService.list(Wrappers.<Collect>lambdaQuery()
+                    .eq(Collect::getCollectType, 1)
+                    .eq(Collect::getIsDeleted, false));
+        }
+
+        if (collects.isEmpty()) {
+            return Result.success(List.of());
+        }
+
+        List<Long> targetBookIds = collects.stream().map(Collect::getTargetId).distinct().toList();
+        Map<Long, String> categoryMap = bookService.listByIds(targetBookIds).stream()
+                .filter(book -> !Boolean.TRUE.equals(book.getIsDeleted()))
+                .collect(Collectors.toMap(Book::getId, book -> book.getClassify() == null ? "未分类" : book.getClassify(), (a, b) -> a));
+
+        Map<String, Long> grouped = collects.stream()
+                .map(collect -> categoryMap.get(collect.getTargetId()))
+                .filter(Objects::nonNull)
+                .collect(Collectors.groupingBy(category -> category, Collectors.counting()));
+
+        List<CollectCategoryStatsDTO> result = grouped.entrySet().stream()
+                .map(entry -> {
+                    CollectCategoryStatsDTO dto = new CollectCategoryStatsDTO();
+                    dto.setCategory(entry.getKey());
+                    dto.setTotal(entry.getValue().intValue());
+                    dto.setCollect(entry.getValue().intValue());
+                    return dto;
+                })
+                .toList();
+
+        return Result.success(result);
     }
 
-    /**
-     * 获取书籍收藏统计总数
-     */
     @GetMapping("/stats/summary")
     public Result<CollectCategoryStatsDTO> getCollectSummary(@RequestParam(value = "book_ids", required = false) List<Long> bookIds) {
         long total;
@@ -99,7 +126,6 @@ public class CollectInnerController {
         CollectCategoryStatsDTO dto = new CollectCategoryStatsDTO();
         dto.setTotal((int) total);
         dto.setCollect((int) total);
-
         return Result.success(dto);
     }
 }
